# stm_library

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
devices/: CMakeLists.txt
devices/accel/mpu/: configurator.cpp  configurator.hpp  mpu_6050.cpp  mpu_6050.hpp
devices/accel/mpu/builder/: first.cpp  first.hpp
devices/accel/mpu/config/devices/: configurator.cpp  configurator.hpp
devices/accel/mpu/config/devices/accel/: first.cpp  first.hpp
devices/accel/mpu/config/devices/general/: first.cpp  first.hpp
devices/accel/mpu/config/devices/gyro/: first.cpp  first.hpp
devices/accel/mpu/config/fifo/: configurator.cpp  configurator.hpp
devices/accel/mpu/config/fifo/control/: first.cpp  first.hpp
devices/accel/mpu/config/fifo/enable/: first.cpp  first.hpp
devices/accel/mpu/config/power/: configurator.cpp  configurator.hpp
devices/accel/mpu/config/power/device_reset/: first.cpp  first.hpp
devices/accel/mpu/config/power/general_reset/: first.cpp  first.hpp
devices/accel/mpu/types/: iconfig.hpp
devices/compass/gy/: configurator.cpp  configurator.hpp  gy_271.cpp  gy_271.hpp
devices/compass/gy/mode/: continuous.cpp  continuous.hpp  stand_by.cpp  stand_by.hpp
devices/compass/gy/odr/: odr_10.cpp  odr_10.hpp  odr_100.cpp  odr_100.hpp  odr_200.cpp  odr_200.hpp  odr_50.cpp  odr_50.hpp
devices/compass/gy/osr/: osr_128.cpp  osr_128.hpp  osr_256.cpp  osr_256.hpp  osr_512.cpp  osr_512.hpp  osr_64.cpp  osr_64.hpp
devices/compass/gy/rng/: rng_2.cpp  rng_2.hpp  rng_8.cpp  rng_8.hpp
devices/compass/gy/types/: imode.hpp  iodr.hpp  iosr.hpp  irng.hpp
devices/debug/: sender.cpp  sender.hpp  uart.cpp  uart.hpp
devices/light/: bh1721.cpp  bh1721.hpp
devices/light/bh/: bh1721.cpp  bh1721.hpp
devices/light/bh/mode/: auto.cpp  auto.hpp  high.cpp  high.hpp  low.cpp  low.hpp
devices/light/bh/types/: imode.hpp
devices/pressure/bmp/: bmp_280.cpp  bmp_280.hpp
devices/pressure/bmp/compensation/: compensator.cpp  compensator.hpp  dig_holder.cpp  dig_holder.hpp
devices/pressure/bmp/settings/: gaming.cpp  gaming.hpp  humidity_only.cpp  humidity_only.hpp  indoor_navigation.cpp  indoor_navigation.hpp  weather.cpp  weather.hpp
devices/pressure/bmp/types/: isettings.hpp
gpio/: gpio_init.hpp
gpio/alternative_function/: alternative_function.cpp  alternative_function.hpp
gpio/modes/: alternative_mode.hpp  analog_mode.cpp  output_mode.cpp
gpio/output_type/: open_drain.hpp  push_pull.hpp
gpio/pull/: no_pull.cpp  pull_up.cpp
gpio/speed/: medium_speed.cpp  very_high_speed.cpp
gpio/types/: gpio_afr.hpp  gpio_mode.cpp  gpio_mode.hpp  gpio_output_type.hpp  gpio_speed.cpp
misc/: startup_stm32f407xx.s  stm32f407xx.h
periphery/: CMakeLists.txt
periphery/gpio/: gpio_init.cpp
periphery/gpio/alternative_function/: alternative_function.cpp  alternative_function.hpp
periphery/gpio/modes/: alternative_mode.cpp  analog_mode.hpp  input_mode.cpp  input_mode.hpp  output_mode.hpp
periphery/gpio/output_type/: open_drain.cpp  push_pull.cpp
periphery/gpio/pull/: no_pull.hpp  pull_down.cpp  pull_down.hpp  pull_up.hpp
periphery/gpio/speed/: high_speed.cpp  high_speed.hpp  low_speed.cpp  low_speed.hpp  medium_speed.hpp  very_high_speed.hpp
periphery/gpio/types/: gpio_general.cpp  gpio_general.hpp  gpio_mode.cpp  gpio_output_type.cpp  gpio_pull.hpp  gpio_speed.hpp  periphery_init.hpp
periphery/i2c/: i2c_max_speed.cpp  i2c_max_speed.hpp
periphery/i2c/pins/: first.cpp  first.hpp  second.cpp  second.hpp  third.cpp  third.hpp
periphery/rcc/: simple_rcc.cpp  simple_rcc.hpp
periphery/spi/: pins.cpp  pins.hpp  subject.cpp  subject.hpp
periphery/types/: i2c.hpp  ii2c.hpp  ircc.cpp  ircc.hpp  iuart.hpp  periphery_init.hpp
periphery/types/gpio/: gpio_afr.hpp  gpio_general.cpp  gpio_general.hpp  gpio_mode.cpp  gpio_mode.hpp  gpio_output_type.cpp  gpio_output_type.hpp  gpio_pull.hpp  gpio_speed.cpp  gpio_speed.hpp
periphery/uart/: pins.cpp  pins.hpp  subject.cpp  subject.hpp
periphery/utils/: consistent_registrator.hpp  observer.hpp
periphery/utils/parser/: debug.cpp  debug.hpp  gps_header.cpp  gps_header.hpp
periphery/utils/types/: debug_uart_parser.hpp  parser.hpp  registrator.hpp
rcc/: simple_rcc.hpp
spi/: subject.cpp
tests/: CMakeLists.txt
tests/tests/: CMakeLists.txt
tests/tests/devices/debug/: uart.cpp
tests/tests/devices/light/: bh_1721.cpp
tests/tests/periphery/parser/: debug.cpp
types/: ii2c.hpp  ircc.cpp  ircc.hpp  iuart.hpp
uart/: pins.cpp  subject.cpp  subject.hpp
